@@ -1,3 +1,8 @@
+2007-02-07  Vitaly Alexeev <tishka92@yahoo.com>
+
+	* gameswf/gameswf_test_ogl.cpp: display of the gameswf_logo and process of loading
+	of a swf-file is added
+	
 2007-02-06  Vitaly Alexeev <tishka92@yahoo.com>
 
 	* base/container.h: added operator[] into class hash
